# Azure-Security

./: .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
modules/: activity_logs.py  external_exposure.py  permissive_roles.py  role_assignments.py
